-
Bug
-
Resolution: Done
-
P2: Important
-
5.5.0 RC
-
iOS 8.2
Closing QOpenGLWIdget cause following assert crash:
ASSERT: "qt_window_private(window())->compositing" in file qiosbackingstore.mm, line 194
Line is added in the commit:
http://code.qt.io/cgit/qt/qtbase.git/commit/?id=e46b6db98631804c4c2a79af764190c98c408fb7
For Gerrit Dashboard: QTBUG-46937 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
115527,3 | Fix the internal compositing flag for QOpenGL/QuickWidget | 5.5 | qt/qtbase | Status: MERGED | +2 | 0 |